--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -142,8 +142,9 @@
   overflow: hidden
 
   canvas
-    width: 100%
-    height: 100%
+    position: absolute
+    top: 0px
+    left: 0px
 
 #pages-transition.in-left, #pages-transition.in-right, #pages-transition.out-left, #pages-transition.out-right
   transition: width $speed_metal $evil_ease
@@ -153,6 +154,10 @@
   left: auto
   width: 100%
 
+  canvas
+    right: 0px
+    left: auto
+
 #pages-transition.in-right
   width: 100%
 
@@ -161,7 +166,15 @@
   left: 0px
   width: 0%
 
+  canvas
+    right: auto
+    left: 0px
+
 #pages-transition.out-right
   right: 0px
   left: auto
   width: 0%
+
+  canvas
+    right: 0px
+    left: auto
