markup, styles, hovers, and clicks for title/about btn callout

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -93,7 +93,7 @@
           a:hover
             span:first-child
               transform: translate3d(0%,0,0)
-              transition: transform $speed $evil_ease $speed
+              transition: transform $speed $evil_ease 100ms
 
             span:last-child
               background-color: $black
