--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -195,7 +195,9 @@
     left: 50%
     width: 50%
     height: 100%
-    display: none
+    visibility: hidden
+
+    transition: visibility 0ms linear (($speed * 2) + ($speed / 6))
 
     .detail-zone-inner
       position: absolute
@@ -211,6 +213,13 @@
         left: 0px
         width: 100%
         overflow: hidden
+        opacity: 0
+
+        transform: translate3d(0,-80px,0)
+        
+        @for $i from 1 through 2
+          &:nth-child(#{$i})
+            transition: transform $speed $evil_ease ($i * ($speed / 6)), opacity $speed $evil_ease ($i * ($speed / 6))
 
         &.video-cell
           height: 0
@@ -294,3 +303,18 @@
               content: 'Services Provided'
               color: $white
               display: block
+
+    &.show
+      visibility: visible
+
+      transition: visibility 0ms linear
+
+      .detail-zone-inner
+        .cell
+          opacity: 1
+          
+          transform: translate3d(0,0px,0)
+
+          @for $i from 1 through 2
+            &:nth-child(#{$i})
+              transition: transform $speed $evil_ease ((6 - $i) * ($speed / 6)), opacity $speed $evil_ease ((6 - $i) * ($speed / 6))
