--- a/src/styles/_utils.sass
+++ b/src/styles/_utils.sass
@@ -14,6 +14,14 @@
   100%
     transform: rotate(360deg)
 
+@keyframes bounce
+  0%
+    transform: translate3d(0px,0,0)
+  50%
+    transform: translate3d(6px,0,0)
+  100%
+    transform: translate3d(0px,0,0)
+
 // Clearfixers
 .cf:before,
 .cf:after
