cursor style default

--- a/src/styles/slides/_work.sass
+++ b/src/styles/slides/_work.sass
@@ -24,6 +24,9 @@
     .title-holder
       margin: 0 0 76px
 
+      .line-holder
+        cursor: default
+
   // ---------------------------------------------
   // Meta zone
   // ---------------------------------------------
