--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -14,6 +14,14 @@
     background-position: left bottom
     background-size: contain
     overflow: hidden
+    opacity: 0
+
+    transition: opacity $speed cubic-bezier(0.550, 0.055, 0.675, 0.190)
+
+    &.show
+      opacity: 1
+
+      transition: opacity $speed cubic-bezier(0.215, 0.610, 0.355, 1.000)
   
   // ---------------------------------------------
   // Title zone
@@ -101,7 +109,8 @@
 
               transition: opacity 100ms $ease, visibility 0ms linear 100ms
 
-        &:hover
+        &:hover,
+        &.hover
           .icon
             animation: bounce $speed $evil_ease
 
