adjust bg color transition speed and easing

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -24,7 +24,7 @@
   overflow: hidden
   display: none
 
-  transition: background-color $speed_metal $evil_ease
+  transition: background-color ($speed_metal * 1.5) linear
 
   .page-inner
     position: absolute
