no hover bump if icon has class 'close'

--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -114,7 +114,8 @@
           .icon
             animation: bounce $speed $evil_ease
 
-        &.close:hover
+        &.close:hover,
+        &.close.hover
           .icon
             animation: bounce 0ms linear
 
