cleanup easing vars across stylesheets

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -55,7 +55,7 @@ header
         height: 3px
         background-color: $light_gray
 
-        transition: background-color $speed $ease
+        transition: background-color $speed $ease_out
 
       &.active
         cursor: default
@@ -89,7 +89,7 @@ header
       display: inline-block
       opacity: 1
 
-      transition: opacity $speed $ease
+      transition: opacity $speed $ease_out
 
       &:last-child
         background-position: center -40px
