--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -19,7 +19,8 @@ $speed: 333ms
 $speed_metal: 666ms
 
 // Easing
-$ease: ease-out
+$ease_in: cubic-bezier(0.550, 0.055, 0.675, 0.190)
+$ease_out: cubic-bezier(0.215, 0.610, 0.355, 1.000)
 $evil_ease: cubic-bezier(0.666, 0.000, 0.333, 1.000)
 
 // Typography mixins
