cleanup/simplify title holder styles

--- a/src/styles/slides/_about.sass
+++ b/src/styles/slides/_about.sass
@@ -7,9 +7,10 @@
   .title-zone
     .title-holder
       margin: 0 0 76px
+      cursor: default
 
-      .line-holder
-        cursor: default
+      h2
+        opacity: 1
 
   // ---------------------------------------------
   // Meta zone
