--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -31,6 +31,7 @@
       position: relative
       height: 210px
       overflow: hidden
+      display: inline-block
       cursor: pointer
 
       h2
