--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -61,7 +61,6 @@
           height: 100%
           margin: 0 0 0 12px
           overflow: hidden
-          display: inline-block
 
           .rect
             position: absolute
@@ -186,7 +185,7 @@
               margin: -1px 0 0 -6px
               border-left: 6px solid transparent
               border-right: 6px solid transparent
-              border-top: 6px solid $black            
+              border-top: 6px solid $black
 
           &:hover span
             visibility: visible
@@ -331,3 +330,85 @@
           @for $i from 1 through 2
             &:nth-child(#{$i})
               transition: transform $speed $evil_ease ((6 - $i) * ($speed / 6)), opacity $speed $evil_ease ((6 - $i) * ($speed / 6))
+
+  // ---------------------------------------------
+  // Video zone
+  // ---------------------------------------------
+
+  .video-zone
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    visibility: hidden
+    opacity: 0
+
+    transition: visibility 0ms linear $speed, opacity $speed $ease_out
+
+    &.show
+      visibility: visible
+      opacity: 1
+
+      transition: visibility 0ms linear, opacity $speed $ease_out
+
+    .video-zone-inner
+      position: absolute
+      top: 0px
+      left: 0px
+      right: 40px
+      bottom: 0px
+
+      .video-holder
+        position: absolute
+        top: 100px
+        left: 100px
+        right: 100px
+        bottom: 100px
+        overflow: hidden
+
+        background-color: rgba(0,0,0,1)
+        background-image: url('/images/work/poster.jpg')
+        background-repeat: no-repeat
+        background-position: center center
+        background-size: contain
+
+      .close-btn
+        position: absolute
+        top: 50%
+        left: 40px
+        height: 40px
+        cursor: pointer
+
+        @include type-mono(40px, $bold)
+        transform: rotate(-90deg) translate(0,-50%)
+        
+        .copy
+          float: left
+          position: relative
+          text-transform: capitalize
+
+        .icon
+          float: left
+          position: relative
+          width: 13px
+          height: 100%
+          margin: 0 0 0 12px
+          overflow: hidden
+          display: inline-block
+
+          &:before,
+          &:after
+            content: ''
+            position: absolute
+            top: 50%
+            left: 0px
+            width: 14px
+            height: 2px
+            margin: -1px 0 0
+            background-color: $white
+
+            transform: rotate(45deg)
+
+          &:after
+            transform: rotate(-45deg)
