--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -377,6 +377,54 @@
       left: 0px
       right: 40px
       bottom: 0px
+      cursor: pointer
+
+      .video-close-zone
+        position: absolute
+        top: 0px
+        left: 0px
+        width: 100%
+        height: 100%
+        
+        .close-btn
+          position: absolute
+          top: 50%
+          left: 40px
+          height: 40px
+          cursor: pointer
+
+          @include type-mono(40px, $bold)
+          transform: rotate(-90deg) translate(0,-50%)
+          
+          .copy
+            float: left
+            position: relative
+            text-transform: capitalize
+
+          .icon
+            float: left
+            position: relative
+            width: 13px
+            height: 100%
+            margin: 0 0 0 12px
+            overflow: hidden
+            display: inline-block
+
+            &:before,
+            &:after
+              content: ''
+              position: absolute
+              top: 50%
+              left: 0px
+              width: 14px
+              height: 2px
+              margin: -1px 0 0
+              background-color: $white
+
+              transform: rotate(45deg)
+
+            &:after
+              transform: rotate(-45deg)
 
       .video-holder
         position: absolute
@@ -401,43 +449,3 @@
             left: 0px
             width: 100%
             height: 100%
-
-      .close-btn
-        position: absolute
-        top: 50%
-        left: 40px
-        height: 40px
-        cursor: pointer
-
-        @include type-mono(40px, $bold)
-        transform: rotate(-90deg) translate(0,-50%)
-        
-        .copy
-          float: left
-          position: relative
-          text-transform: capitalize
-
-        .icon
-          float: left
-          position: relative
-          width: 13px
-          height: 100%
-          margin: 0 0 0 12px
-          overflow: hidden
-          display: inline-block
-
-          &:before,
-          &:after
-            content: ''
-            position: absolute
-            top: 50%
-            left: 0px
-            width: 14px
-            height: 2px
-            margin: -1px 0 0
-            background-color: $white
-
-            transform: rotate(45deg)
-
-          &:after
-            transform: rotate(-45deg)
