--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -1,16 +1,70 @@
 .slide.about-process
+
+  // ---------------------------------------------
+  // Picture zone
+  // ---------------------------------------------
+
+  .picture-zone
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    background-repeat: no-repeat
+    background-position: right bottom
+    background-size: contain
+    overflow: hidden
   
   // ---------------------------------------------
-  // Temp H2
+  // Title zone
   // ---------------------------------------------
 
-  h2
-    position: absolute
-    top: 50%
-    left: 100px
-    font-size: 66px
-    line-height: 56px
-    font-weight: $bold
-    text-transform: uppercase
+  .title-zone
+    top: 92px
 
-    transform: translate(0, -50%)
+    transform: none
+
+    .title-holder
+      height: 40px
+      cursor: default
+
+      h2
+        float: none
+        height: 40px
+        padding: 0
+        color: $black
+        font-size: 30px
+        line-height: 40px
+        font-weight: $bold
+
+        transform: translate3d(0,0px,0)
+
+        &:last-child
+          margin: 0
+          clear: none
+
+        &:after
+          display: none
+
+      &.top h2
+        transform: translate3d(0,-40px,0)
+
+      &.bottom h2
+        transform: translate3d(0,40px,0)
+
+      &.trans-in h2
+        opacity: 1
+
+        transform: translate3d(0,0px,0)
+        transition: transform $speed $ease_out, opacity $speed $ease_out
+
+      &.trans-out h2
+        opacity: 0
+        
+        transition: transform $speed $ease_in, opacity $speed $ease_in
+
+      &.trans-out.top h2
+        transform: translate3d(0,40px,0)
+
+      &.trans-out.bottom h2
+        transform: translate3d(0,-40px,0)
