--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -68,3 +68,114 @@
 
       &.trans-out.bottom h2
         transform: translate3d(0,-40px,0)
+
+  // ---------------------------------------------
+  // Info zone
+  // ---------------------------------------------
+
+  .info-zone
+    position: absolute
+    bottom: 92px
+    left: 100px
+    right: 50%
+
+    .content
+      width: 100%
+      max-width: 420px
+
+      h4
+        color: $black
+        @include type-mono(24px, $regular)
+
+      p
+        @include type-mono(24px, $regular)
+
+        a
+          position: relative
+          color: $black
+          display: inline-block
+
+          &:after
+            content: ''
+            position: absolute
+            bottom: 0px
+            left: 0px
+            width: 100%
+            height: 2px
+            background-color: $white
+
+      ul.callouts
+        height: 40px
+        margin: 20px 0 -8px
+
+        li.callout
+          float: left
+          position: relative
+          height: 100%
+          color: $black
+          cursor: pointer
+
+          @include type-mono(40px, $regular)
+
+          &:first-child
+            padding: 0 20px 0 0
+
+          &:last-child
+            padding: 0 0 0 20px
+
+          .copy
+            float: left
+            position: relative
+
+          .icon
+            float: left
+            position: relative
+            width: 25px
+            height: 100%
+            margin: 0 0 0 12px
+            overflow: hidden
+
+            .rect
+              position: absolute
+              top: 50%
+              left: 0px
+              width: 14px
+              height: 2px
+              margin: -1px 0 0
+              background-color: $white
+
+            .tri
+              position: absolute
+              top: 50%
+              left: 12px
+              width: 0
+              height: 0
+              margin: -4px 0 0
+              border-top: 4px solid transparent
+              border-bottom: 4px solid transparent
+              border-left: 6px solid $white
+
+          &:hover
+            .icon
+              animation: bounce $speed $evil_ease
+
+      ul.lists
+        float: left
+        width: 50%
+        margin: 20px 0 0
+
+        li
+          @include type-mono(24px, $regular)
+
+          &:first-child
+            color: $black
+
+      ul.stack
+        margin: 0 0 20px
+
+        li
+          @include type-mono(24px, $regular)
+
+          &:first-child
+            color: $black
+
